--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,6 +10,8 @@
 
 @import "components/about";
 @import "components/details";
+@import "components/pro-skills";
 
 @import "layout/header";
 @import "layout/section-profile";
+@import "layout/section-experience";
