--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -2,10 +2,9 @@ body {
     font-family: "Lato", sans-serif;
     font-weight: 400;
     line-height: 1.7;
-    color: $color-gray-dark-1;
+    color: $color-grey-dark-1;
 
 }
-
 
 .primary-heading{
     color: $color-white;
@@ -32,17 +31,35 @@ body {
     text-transform: uppercase;
     font-weight: 700;
     display: inline-block;
-    @include backgroundImage__Header--Secondary;
     letter-spacing: 1rem;
-    transition: background-position 1s linear;
+
+    &--blue{
+        @include backgroundImage__Header--Secondary-Blue;
+        transition: background-position 1s linear;
+    }
+
+    &--white{
+        // @include backgroundImage__Header--Secondary-White;
+        color: $color-grey-light-2;
+    }
 }
 
+
 .terciary-heading{
-    width: 10em;
+    width: 30rem;
     font-size: 2rem;
     font-weight: 700;
     display: inline-block;
-    @include backgroundImage__Header--Terciary;
     letter-spacing: .3rem;
-    transition: background-position 1s linear;
+
+    &--blue{
+        @include backgroundImage__Header--Terciary;
+        transition: background-position 1s linear;
+    }
+
+
+    &--white{
+        // @include backgroundImage__Header--Terciary-White;
+        color: $color-grey-light-2;
+    }
 }
