--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -13,3 +13,7 @@
 .u-margin-bottom-big {
     margin-bottom: 8rem !important;
 }
+
+.u-padding-bottom-big {
+    padding-bottom: 8rem !important;
+}
