--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -14,6 +14,9 @@ $color-grey-dark-3: #333;
 $color-white: #fff;
 $color-black: #000;
 
+// Skills Rating Bar Width
+$rating-white-bar-width: 15rem;
+
 
 // Grid
 $grid-width: 114rem;
