--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,8 +11,10 @@
 
 @import "components/about";
 @import "components/details";
+@import "components/education";
 @import "components/skills";
 
 @import "layout/header";
 @import "layout/section-profile";
-@import "layout/section-experience";
+@import "layout/section-skills";
+@import "layout/section-education";
