--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,65 +1,63 @@
 body {
-    font-family: "Lato", sans-serif;
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+  line-height: 1.7;
+  color: $color-grey-dark-1;
+}
+
+.primary-heading {
+  color: $color-white;
+  text-transform: uppercase;
+
+  &--name {
+    display: block;
+    font-size: 6.2rem;
+    font-weight: 300;
+    letter-spacing: 1.3rem;
+    white-space: nowrap;
+  }
+
+  &--sub {
+    display: block;
+    // font-size: 4.8rem;
     font-weight: 400;
-    line-height: 1.7;
-    color: $color-grey-dark-1;
-
+    letter-spacing: 0.5rem;
+  }
 }
 
-.primary-heading{
-    color: $color-white;
-    text-transform: uppercase;
+.secondary-heading {
+  width: 60%;
+  font-size: 4rem;
+  text-transform: uppercase;
+  font-weight: 700;
+  display: inline-block;
+  letter-spacing: 1rem;
 
-    &--name{
-        display: block;
-        font-size: 6.2rem;
-        font-weight: 300;
-        letter-spacing: 1.3rem;
-    }
+  &--blue {
+    @include backgroundImage__Header--Secondary-Blue;
+    transition: background-position 1s linear;
+  }
 
-    &--sub{
-        display: block;
-        // font-size: 4.8rem;
-        font-weight: 400;
-        letter-spacing: .5rem;
-    }
+  &--white {
+    // @include backgroundImage__Header--Secondary-White;
+    color: $color-grey-light-2;
+  }
 }
 
-.secondary-heading{
-    width: 60%;
-    font-size: 4rem;
-    text-transform: uppercase;
-    font-weight: 700;
-    display: inline-block;
-    letter-spacing: 1rem;
+.terciary-heading {
+  width: 30rem;
+  font-size: 2rem;
+  font-weight: 700;
+  display: inline-block;
+  letter-spacing: 0.3rem;
 
-    &--blue{
-        @include backgroundImage__Header--Secondary-Blue;
-        transition: background-position 1s linear;
-    }
+  &--blue {
+    @include backgroundImage__Header--Terciary;
+    transition: background-position 1s linear;
+  }
 
-    &--white{
-        // @include backgroundImage__Header--Secondary-White;
-        color: $color-grey-light-2;
-    }
-}
-
-
-.terciary-heading{
-    width: 30rem;
-    font-size: 2rem;
-    font-weight: 700;
-    display: inline-block;
-    letter-spacing: .3rem;
-
-    &--blue{
-        @include backgroundImage__Header--Terciary;
-        transition: background-position 1s linear;
-    }
-
-
-    &--white{
-        // @include backgroundImage__Header--Terciary-White;
-        color: $color-grey-light-2;
-    }
+  &--white {
+    // @include backgroundImage__Header--Terciary-White;
+    color: $color-grey-light-2;
+  }
 }
