--- a/sass/components/_education.scss
+++ b/sass/components/_education.scss
@@ -1,46 +1,63 @@
 .education {
-    width: 75%;
+  padding: 0 15rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  &__group {
+    margin: 3rem;
+    min-width: 57rem;
+    padding: 1rem;
+    border-width: 2px;
+    border-style: solid;
+    border-image: linear-gradient(
+        to right bottom,
+        $color-primary-dark 15%,
+        $color-primary-light 30%,
+        $color-primary-dark 50%
+      )
+      72 1;
     display: flex;
     flex-direction: column;
     align-items: center;
+    transition: transform 0.4s linear;
 
-    &__group{
-        margin: 3rem;
-        padding: 1rem;
-        border-width:  2px;
-        border-style:  solid;
-        border-image: linear-gradient(to right bottom, $color-primary-dark 15%, $color-primary-light 30%, $color-primary-dark 50%) 72 1;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        transition: transform .4s linear;
-
-        &:hover{
-        border-image: linear-gradient(to left bottom, $color-primary-dark 15%, $color-primary-light 30%, $color-primary-dark 50%) 72 1;
-        transform:  scale(1.05);
-        }
-
-        &:hover .terciary-heading {
-            background-position: 13rem 0;
-        }
-
-        &:not(:first-child) {
-            align-self: flex-end;
-        }
-        
-        
+    &:hover {
+      border-image: linear-gradient(
+          to left bottom,
+          $color-primary-dark 15%,
+          $color-primary-light 30%,
+          $color-primary-dark 50%
+        )
+        72 1;
+      transform: scale(1.05);
     }
 
-    &__date{
-        align-self: left;
-        font-size: 1.4rem;
+    &:hover .terciary-heading {
+      background-position: 13rem 0;
     }
 
-    &__type{
-        width: 100%;
+    &:nth-child(even) {
+      align-self: flex-end;
     }
+    &:nth-child(odd) {
+      align-self: flex-start;
+    }
+  }
 
-    &__school{
-        font-size: 2rem;
-    }
+  &__date {
+    align-self: left;
+    font-size: 1.4rem;
+  }
+
+  &__type {
+    width: 100%;
+    text-align: center;
+  }
+
+  &__school {
+    font-size: 2rem;
+    text-decoration: none;
+    color: #777;
+  }
 }
